--- a/hw3index.html
+++ b/hw3index.html
@@ -26,6 +26,11 @@
         #chances, button, #numLosses, #numWins {
             background-color: darkgreen;
         }
+
+        button {
+            width: 120px;
+            margin-left: 45px;
+        }
     </style>
 
 </head>
