--- a/hw3index.html
+++ b/hw3index.html
@@ -46,7 +46,7 @@
         <button type="reset" id="reset"><p>Reset</p></button>
         <hr>
         <div id="wrongLetters"><p></p></div>
-        <div id="chancesLeft">Number of chances to guess left: <span id="chances">10</span></div>
+        <div id="chancesLeft">Number of guesses left: <span id="chances">10</span></div>
         <script type="text/javascript" src="logic.js">
         </script>
     </div>
